syntax = "proto3";
package protos;
option go_package = "github.com/Azure/azure-container-networking/npm/pkg/protos;protos";

import "google/protobuf/struct.proto";

// DataplaneEvents represents the Service RPC exposed by the gRPC server.
service DataplaneEvents{
	rpc Connect(DatapathPodMetadata) returns (stream Events);
}

// DatapathPodMetadata is the metadata for a datapath pod
message DatapathPodMetadata {
  string pod_name = 1; // Daemonset Pod ID
  string node_name = 2; // Node name
  enum APIVersion {
    V1 = 0;
  }
  APIVersion apiVersion = 3; // Controlplane API version to support backwards compatibility
}

// Events defines the operation (event type) and object type being
// streamed to the datapath client. A events message may carry one or
// more Event objects.
message Events{
  EventType type = 1;
  // The following events are supported:
  enum EventType {
    // Send a CREATE/UPDATE event to a datapath Pod
    APPLY = 0;
    // Send a DELETE event to a datapath Pod
    REMOVE = 1;
  }

  ObjectType object = 2;
  // Supported objects are IPSet and NetworkPolicy objects.
  enum ObjectType {
    IPSET = 0;
    POLICY = 1;
  }
  // Payload can contain one or more Event objects.
  repeated Event event = 3;
}

// Event is a generic object that can be Created, 
// Updated, Deleted by the controlplane.
message Event {
  // Data can contain one or more instances of IPSet or NetworkPolicy
  // objects.
	repeated google.protobuf.Struct data = 3;
}
